# Citordle

./: .gitignore  Justfile  README.md
backend/: Cargo.toml
backend/data/: allowed_words.txt  cities.json  world_cities_game_pack_60.json
backend/data/cities/: README.md
backend/src/: city.rs  game.rs  loader.rs  main.rs  models.rs  session.rs
backend/src/routes/: game.rs  health.rs
frontend/: astro.config.mjs  package.json  tsconfig.json
frontend/src/components/: CitordleApp.tsx  CountryOutlineMap.tsx
frontend/src/layouts/: BaseLayout.astro
frontend/src/pages/: index.astro
frontend/src/styles/: global.css
